# TwoBody

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  API.py  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  dev-environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: packaging.yml  tests.yml
docs/: celestial.rst  conf.py  contribute.rst  full-api.rst  getting-started.rst  index.rst  install.rst  tests.rst
docs/_static/: make-logo.py
docs/twobody/: celestial.rst  contribute.rst  full-api.rst  index.rst
licenses/: LICENSE.rst  README.rst
twobody/: .gitignore  __init__.py  anomaly.py  bary_trends.py  barycenter.py  conftest.py  core.py  eccentric_anomaly_from_mean_anomaly_Householder3.py  elements.py  orbit.py  reference_plane.py  setup_package.py  transforms.py  units.py  utils.py  wrap.pxd  wrap.pyx
twobody/celestial/: __init__.py  anomaly.py  core.py  orbit.py  setup_package.py  trends.py  utils.py  wrap.pxd  wrap.pyx
twobody/celestial/src/: twobody.c  twobody.h
twobody/celestial/tests/: test_anomaly.py  test_orbit.py  test_trends.py
twobody/example_subpkg/: setup_package.py
twobody/src/: twobody.c  twobody.h
twobody/tests/: test_anomaly.py  test_api.py  test_bary_trends.py  test_barycenter.py  test_elements.py  test_orbit.py  test_reference_plane.py  test_transforms.py
