[metadata]
name = twobody
author = Adrian Price-Whelan
author_email = adrianmpw@gmail.com
license = MIT
license_file = licenses/LICENSE.rst
url = https://github.com/adrn/TwoBody
description = The gravitational two-body problem.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adrn/TwoBody

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy

[options.entry_points]

[options.extras_require]
test =
    pytest-astropy
    numpy
    astropy
    scipy
    matplotlib
docs =
    sphinx
    sphinx-astropy
    numpy
    astropy
    scipy
    matplotlib

[options.package_data]
twobody =
    src/*.h
    src/*.c
    *.pyx
    *.pxd

[tool:pytest]
testpaths = "twobody" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    twobody/_astropy_init*
    twobody/conftest.py
    twobody/*setup_package*
    twobody/tests/*
    twobody/*/tests/*
    twobody/extern/*
    twobody/version*
    */twobody/_astropy_init*
    */twobody/conftest.py
    */twobody/*setup_package*
    */twobody/tests/*
    */twobody/*/tests/*
    */twobody/extern/*
    */twobody/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
